fix(auth): add profile to body
