# modules/routes.go
@@ -1,6 +1,7 @@
 package routes
 
 import (
+	middleware "citizen_system_back/middleware"
 	asset_routes "citizen_system_back/modules/assets"
 	dev_tools_routes "citizen_system_back/modules/dev_tools"
 	users_routes "citizen_system_back/modules/users"
@@ -9,11 +10,10 @@ import (
 )
 
 // RegisterRoutes registers all application routes.
-// @Security CookieAuth
 func RegisterRoutes(router *gin.Engine) {
 	// Register Asset routes with the database passed as a dependency
 	assetGroup := router.Group("/api/v1")
-	// assetGroup.Use(middleware.AuthMiddleware)
+	assetGroup.Use(middleware.AuthMiddleware)
 	asset_routes.RegisterAssetRoutes(assetGroup)
 	dev_tools_routes.RegisterDevToolsRoutes(assetGroup)
 	users_routes.RegisterAssetRoutes(assetGroup)
