# modules/users/users_routes.go
@@ -3,7 +3,7 @@ package users_routes
 import "github.com/gin-gonic/gin"
 
 // RegisterAssetRoutes registers routes for asset-related operations
-// @Security CookieAuth
+// @Security BearerAuth
 func RegisterAssetRoutes(router *gin.RouterGroup) {
 	// router.GET("/assets", middleware.AuthMiddleware, asset_controllers.ListAssets())
 }
